change settings page

--- a/app/views/settings/_telegram_email_settings.html.erb
+++ b/app/views/settings/_telegram_email_settings.html.erb
@@ -1,3 +1,7 @@
+<pre>
+	Create two <a href="/custom_fields/new?utf8=%E2%9C%93&type=UserCustomField">user custom fields:</a> named <b>Telegram Channel</b>(text) and <b>Telegram disable email</b>(boolean, default no, checkboxes).
+</pre>
+
 <p>
 	<label for="settings_telegram_bot_token">Telegram BOT Token</label>
 	<input type="text" id="settings_telegram_bot_token" size=80 value="<%= settings['telegram_bot_token'] %>" name="settings[telegram_bot_token]" />
