--- a/app/views/settings/_telegram_email_settings.html.erb
+++ b/app/views/settings/_telegram_email_settings.html.erb
@@ -1,5 +1,6 @@
 <pre>
 	Create two <a href="/custom_fields/new?utf8=%E2%9C%93&type=UserCustomField">user custom fields:</a> named <b>Telegram Channel</b>(text) and <b>Telegram disable email</b>(boolean, default no, checkboxes).
+	And you can use them into <a href="/my/account">Every user account</a>
 </pre>
 
 <p>
